Switching to http and adding bpmn

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   <dependencies>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-amazon-lambda</artifactId>
+            <artifactId>quarkus-amazon-lambda-http</artifactId>
     </dependency>
     <dependency>
       <groupId>org.kie.kogito</groupId>
